--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
 		<h1>Hello Gophers</h1>
+    <h2>How are you?!</h2>
 		<img class="gopher" src="/static/gopher.svg" />
 		<p>It's {{.Time.Format "3:04PM" }} (in Greenwich)</p>
   </body>
